Support locations update API
